--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,15 @@
 [submodule "pack/yeastplume/start/nerdtree"]
 	path = pack/yeastplume/start/nerdtree
 	url = https://github.com/scrooloose/nerdtree.git
+[submodule "pack/yeastplume/start/syntastic"]
+	path = pack/yeastplume/start/syntastic
+	url = https://github.com/vim-syntastic/syntastic.git
+[submodule "pack/yeastplume/start/rust.vim"]
+	path = pack/yeastplume/start/rust.vim
+	url = https://github.com/rust-lang/rust.vim.git
+[submodule "pack/yeastplume/start/vim-airline"]
+	path = pack/yeastplume/start/vim-airline
+	url = https://github.com/vim-airline/vim-airline.git
+[submodule "pack/yeastplume/start/vim-fugitive"]
+	path = pack/yeastplume/start/vim-fugitive
+	url = https://github.com/tpope/vim-fugitive.git
