--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,9 @@
 [submodule "pack/yeastplume/start/vim-fugitive"]
 	path = pack/yeastplume/start/vim-fugitive
 	url = https://github.com/tpope/vim-fugitive.git
+[submodule "pack/yeastplume/start/ctrlp.vim"]
+	path = pack/yeastplume/start/ctrlp.vim
+	url = https://github.com/ctrlpvim/ctrlp.vim.git
+[submodule "pack/yeastplume/start/vim-racer"]
+	path = pack/yeastplume/start/vim-racer
+	url = https://github.com/racer-rust/vim-racer.git
