--- a/.gitmodules
+++ b/.gitmodules
@@ -16,6 +16,6 @@
 [submodule "pack/yeastplume/start/ctrlp.vim"]
 	path = pack/yeastplume/start/ctrlp.vim
 	url = https://github.com/ctrlpvim/ctrlp.vim.git
-[submodule "pack/yeastplume/start/vim-racer"]
-	path = pack/yeastplume/start/vim-racer
-	url = https://github.com/racer-rust/vim-racer.git
+[submodule "pack/yeastplume/start/YouCompleteMe"]
+	path = pack/yeastplume/start/YouCompleteMe
+	url = https://github.com/Valloric/YouCompleteMe
