--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,9 @@
 [submodule "pack/yeastplume/start/YouCompleteMe"]
 	path = pack/yeastplume/start/YouCompleteMe
 	url = https://github.com/Valloric/YouCompleteMe
+[submodule "pack/yeastplume/start/vim-tmux-navigator"]
+	path = pack/yeastplume/start/vim-tmux-navigator
+	url = https://github.com/christoomey/vim-tmux-navigator.git
+[submodule "tmux-plugins/tmux-resurrect"]
+	path = tmux-plugins/tmux-resurrect
+	url = https://github.com/tmux-plugins/tmux-resurrect
