--- a/.tmux.conf
+++ b/.tmux.conf
@@ -18,4 +18,10 @@ bind - split-window -v -c "#{pane_current_path}"
 
 set-option -g mode-keys vi
 
+# remap prefix to Control + a
+set -g prefix C-a
+# bind 'C-a C-a' to type 'C-a'
+bind C-a send-prefix
+unbind C-b
+
 run-shell ~/.vim/tmux-plugins/tmux-resurrect/resurrect.tmux
