--- a/.tmux.conf
+++ b/.tmux.conf
@@ -23,5 +23,9 @@ set -g prefix C-a
 # bind 'C-a C-a' to type 'C-a'
 bind C-a send-prefix
 unbind C-b
+Shell
+set -g @plugin '~/.vim/tmux-plugins/tmux-resurrect'
+set -g @plugin '~/.vim/tmux-plugins/tmux-continuum'
 
-run-shell ~/.vim/tmux-plugins/tmux-resurrect/resurrect.tmux
+set -g @continuum-restore 'on'
+set -g @resurrect-save-shell-history 'on'
