tmux plugin manager

--- a/.gitmodules
+++ b/.gitmodules
@@ -35,3 +35,6 @@
 [submodule "tmux-plugins/tmux-continuum"]
 	path = tmux-plugins/tmux-continuum
 	url = https://github.com/tmux-plugins/tmux-continuum.git
+[submodule "tmux-plugins/tpm"]
+	path = tmux-plugins/tpm
+	url = https://github.com/tmux-plugins/tpm.git
