--- a/.tmux.conf
+++ b/.tmux.conf
@@ -23,9 +23,11 @@ set -g prefix C-a
 # bind 'C-a C-a' to type 'C-a'
 bind C-a send-prefix
 unbind C-b
-Shell
-set -g @plugin '~/.vim/tmux-plugins/tmux-resurrect'
-set -g @plugin '~/.vim/tmux-plugins/tmux-continuum'
+
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 
 set -g @continuum-restore 'on'
 set -g @resurrect-save-shell-history 'on'
+run -b '~/.vim/tmux-plugins/tpm/tpm'
